--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Good Luck My Love</title>
   <style>
     * {
@@ -15,25 +14,23 @@
       background: black;
       color: white;
       overflow-x: hidden;
-      overflow-y: auto;
       text-align: center;
     }
 
     .container {
-      position: relative;
-      padding: 80px 20px;
+      padding: 60px 20px;
       z-index: 2;
+      position: relative;
     }
 
     h1 {
-      font-size: 36px;
+      font-size: 8vw;
       margin-bottom: 20px;
       color: #ffc1e3;
     }
 
     .typewriter {
-      font-size: 18px;
-      width: 90%;
+      font-size: 4.5vw;
       max-width: 600px;
       margin: 0 auto 30px;
       line-height: 1.6;
@@ -43,13 +40,30 @@
       animation: typing 5s steps(100, end), blink-caret 0.75s step-end infinite;
     }
 
+    @media (min-width: 768px) {
+      h1 {
+        font-size: 36px;
+      }
+
+      .typewriter {
+        font-size: 18px;
+        white-space: normal;
+      }
+    }
+
     @keyframes typing {
-      from { width: 0 }
-      to { width: 100% }
+      from {
+        width: 0;
+      }
+      to {
+        width: 100%;
+      }
     }
 
     @keyframes blink-caret {
-      50% { border-color: transparent }
+      50% {
+        border-color: transparent;
+      }
     }
 
     .photo {
@@ -71,7 +85,7 @@
       font-size: 16px;
       border-radius: 30px;
       cursor: pointer;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
       transition: 0.3s;
     }
 
@@ -79,22 +93,23 @@
       background-color: #ff4b61;
     }
 
-    /* Modal Styles */
     .modal {
       display: none;
       position: fixed;
       z-index: 100;
-      left: 0; top: 0;
-      width: 100%; height: 100%;
-      background-color: rgba(0,0,0,0.6);
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.6);
     }
 
     .modal-content {
       background-color: #fff;
       margin: 10% auto;
-      padding: 30px;
+      padding: 30px 20px;
       border-radius: 20px;
-      width: 80%;
+      width: 90%;
       max-width: 500px;
       text-align: center;
       position: relative;
@@ -104,11 +119,13 @@
     .modal-content h2 {
       color: #ff6b81;
       margin-bottom: 15px;
+      font-size: 20px;
     }
 
     .modal-content p {
       color: #333;
       line-height: 1.6;
+      font-size: 16px;
     }
 
     .close {
@@ -126,20 +143,28 @@
     }
 
     @keyframes fadeIn {
-      from { opacity: 0; transform: scale(0.95); }
-      to { opacity: 1; transform: scale(1); }
+      from {
+        opacity: 0;
+        transform: scale(0.95);
+      }
+      to {
+        opacity: 1;
+        transform: scale(1);
+      }
     }
 
-    /* Fireworks / Sparkle Effect */
     .fireworks {
       position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
       pointer-events: none;
       z-index: 0;
     }
   </style>
 </head>
+
 <body>
 
 <!-- Sparkle Effect Script -->
@@ -150,7 +175,7 @@
 
   <div class="typewriter">
     I'm always cheering for you! You’ve worked so hard and I know you’ll make it.<br>
-      This is your moment. I believe in you 1000%! You got this! 💪<br><br>
+      This is your moment. I believe in you 1000%!<br> You got this! 💪<br><br>
       I love you! 💖
     </div>
 
