--- a/index.html
+++ b/index.html
@@ -174,7 +174,8 @@
   <h1>Good Luck My Love! 🍀</h1>
 
   <div class="typewriter">
-    I'm always cheering for you! You’ve worked so hard and I know you’ll make it.<br>
+    I'm always cheering for you! 
+    <br>You’ve worked so hard and I know you’ll make it.<br><br>
       This is your moment. I believe in you 1000%!<br> You got this! 💪<br><br>
       I love you! 💖
     </div>
