--- a/index.html
+++ b/index.html
@@ -175,8 +175,9 @@
 
   <div class="typewriter">
     I'm always cheering for you! 
-    <br>You’ve worked so hard and I know you’ll make it.<br><br>
-      This is your moment. I believe in you 1000%!<br> You got this! 💪<br><br>
+    <br>You’ve worked so hard and 
+    <br>I know you’ll make it.<br><br>
+    This is your moment. I believe in you 1000%!<br> You got this! 💪<br><br><br>
       I love you! 💖
     </div>
 
